fix product flex wrap

--- a/css/index.css
+++ b/css/index.css
@@ -43,7 +43,7 @@
 }
 
 .products-image__wrapper {
-  margin-bottom: -5px;
+  margin-bottom: -10px;
 }
 
 .products__title {
